--- a/Session 9/random_forest_classification_SOL.ipynb
+++ b/Session 9/random_forest_classification_SOL.ipynb
@@ -356,7 +356,7 @@
     "from sklearn.metrics import f1_score as metric\n",
     "\n",
     "# Random Forest\n",
-    "n_estimators_values = [10, 100, 1000];\n",
+    "n_estimators_values = [10, 100, 1000]\n",
     "max_features_values = [2, 5, 10]\n",
     "max_samples_values = [100, 1000, X_train.shape[0]]\n",
     "\n",
