--- a/mock_midterm.ipynb
+++ b/mock_midterm.ipynb
@@ -431,7 +431,9 @@
     "dat = pd.concat([X_res, y_res, dat['dataset'], dat['date']], axis = 1)\n",
     "\n",
     "# Checking the class distribution after SMOTE\n",
-    "100 * dat.groupby(['exitus'])['exitus'].agg(['count']) / dat.shape[0]"
+    "100 * dat.groupby(['exitus'])['exitus'].agg(['count']) / dat.shape[0]\n",
+    "\n",
+    "# only with train"
    ],
    "metadata": {
     "collapsed": false,
